tests/typecheck/bad/str-bad-char-3.scilexp
(* This string has 0x16 (SYN) ASCII character. *)
(* It is used as an index separator in the blockchain. *)
(* It is specifically forbidded. *)

let s = "" in
s
